-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11.0.20, 15, 17, 18
-
Component/s: hotspot
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8310078 | 17.0.9-oracle | Alex Menkov | P3 | Resolved | Fixed | b01 |
| JDK-8306092 | 17.0.8 | Jaroslav BachorĂk | P3 | Resolved | Fixed | b01 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S481/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d7875b72-18cd-405a-ad0e-c6e8d97a4b4d/runs/2d893a8b-442c-41d2-a13f-7a4e4b936429/workspace/open/src/hotspot/share/runtime/handles.hpp:170), pid=31732, tid=31794
# assert(_value != __null) failed: resolving NULL _value
#
# JRE version: Java(TM) SE Runtime Environment (15.0+24) (fastdebug build 15-ea+24-1168)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+24-1168, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1073d64] JvmtiExport::post_compiled_method_load(JvmtiEnv*, nmethod*)+0x374
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S355/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7fd51dbc-c901-4e7b-bc5b-dc3b28f3a43e/runs/0ef35010-c05b-4b00-ace4-861c0685c381/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_serviceability/scratch/3/core.31732)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.class.path.prefix=/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S355/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7fd51dbc-c901-4e7b-bc5b-dc3b28f3a43e/runs/0ef35010-c05b-4b00-ace4-861c0685c381/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_serviceability/classes/0/serviceability/jvmti/CompiledMethodLoad/Zombie.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/src.full/open/test/hotspot/jtreg/serviceability/jvmti/CompiledMethodLoad -Dtest.file=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/src.full/open/test/hotspot/jtreg/serviceability/jvmti/CompiledMethodLoad/Zombie.java -Dtest.src=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/src.full/open/test/hotspot/jtreg/serviceability/jvmti/CompiledMethodLoad -Dtest.src.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/src.full/open/test/hotspot/jtreg/serviceability/jvmti/CompiledMethodLoad -Dtest.classes=/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S355/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7fd51dbc-c901-4e7b-bc5b-dc3b28f3a43e/runs/0ef35010-c05b-4b00-ace4-861c0685c381/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_serviceability/classes/0/serviceability/jvmti/CompiledMethodLoad/Zombie.d -Dtest.class.path=/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S355/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7fd51dbc-c901-4e7b-bc5b-dc3b28f3a43e/runs/0ef35010-c05b-4b00-ace4-861c0685c381/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_serviceability/classes/0/serviceability/jvmti/CompiledMethodLoad/Zombie.d -Dtest.vm.opts=-XX:MaxRAMPercentage=6 -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=6 -Dtest.compiler.opts= -Dtest.java.opts= -Dtest.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.jdk/jdk-15/fastdebug -Dcompile.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.jdk/jdk-15/fastdebug -Dtest.timeout.factor=4.0 -Dtest.root=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/src.full/open/test/hotspot/jtreg -Dtest.nativepath=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.test/hotspot/jtreg/native -XX:MaxRAMPercentage=6 -Djava.library.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.test/hotspot/jtreg/native -agentlib:CompiledZombie -Xcomp -XX:ReservedCodeCacheSize=20m com.sun.javatest.regtest.agent.MainWrapper /opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S355/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7fd51dbc-c901-4e7b-bc5b-dc3b28f3a43e/runs/0ef35010-c05b-4b00-ace4-861c0685c381/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_serviceability/serviceability/jvmti/CompiledMethodLoad/Zombie.d/main.0.jta
Host: Intel(R) Xeon(R) Platinum 8167M CPU @ 2.00GHz, 8 cores, 58G, Oracle Linux Server release 7.8
Time: Sat May 23 16:31:06 2020 UTC elapsed time: 2.619168 seconds (0d 0h 0m 2s)
--------------- T H R E A D ---------------
Current thread (0x00007fbb58469910): JavaThread "Thread-0" daemon [_thread_in_vm, id=31794, stack(0x00007fbb0feff000,0x00007fbb10000000)]
Stack: [0x00007fbb0feff000,0x00007fbb10000000], sp=0x00007fbb0fffea30, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1073d64] JvmtiExport::post_compiled_method_load(JvmtiEnv*, nmethod*)+0x374
V [libjvm.so+0x10806bc] JvmtiDeferredEventQueue::post(JvmtiEnv*)+0xcc
V [libjvm.so+0x10abf0a] JvmtiThreadState::post_events(JvmtiEnv*)+0x1a
V [libjvm.so+0xfc7154] JvmtiCodeBlobEvents::generate_compiled_method_load_events(JvmtiEnv*)+0x2e4
V [libjvm.so+0xfcce6b] jvmti_GenerateEvents+0x2ab
C [libCompiledZombie.so+0x87b] GenerateEventsThread+0x4b
V [libjvm.so+0x107c564] JvmtiAgentThread::call_start_function()+0x1d4
V [libjvm.so+0x16a8976] JavaThread::thread_main_inner()+0x226
V [libjvm.so+0x16ae810] Thread::call_run()+0x100
V [libjvm.so+0x13b2426] thread_native_entry(Thread*)+0x116
Register to memory mapping:
RAX=0x00007fbb61b61000 points into unknown readable memory: 58 00 00 00 00 00 00 00
RBX=0x00007fbb58023d70 points into unknown readable memory: d8 71 e2 60 bb 7f 00 00
RCX=0x00007fbb60adbb9a: <offset 0x0000000001a0fb9a> in /opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.jdk/jdk-15/fastdebug/lib/server/libjvm.so at 0x00007fbb5f0cc000
RDX=0x00007fbb60946d08: <offset 0x000000000187ad08> in /opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.jdk/jdk-15/fastdebug/lib/server/libjvm.so at 0x00007fbb5f0cc000
RSP=0x00007fbb0fffea30 is pointing into the stack for thread: 0x00007fbb58469910
RBP=0x00007fbb0fffebf0 is pointing into the stack for thread: 0x00007fbb58469910
RSI=0x00000000000000aa is an unknown value
RDI=0x00007fbb60946d28: <offset 0x000000000187ad28> in /opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.jdk/jdk-15/fastdebug/lib/server/libjvm.so at 0x00007fbb5f0cc000
R8 =0x0000000000003ac9 is an unknown value
R9 =0x00007fbb5d28dfa5 is at entry_point+805 in (nmethod*)0x00007fbb5d28da90
R10=0x000000000000003d is an unknown value
R11=0x0000000000000164 is an unknown value
R12=0x00007fbb5d28da90 is at entry_point+-496 in (nmethod*)0x00007fbb5d28da90
R13=0x00007fbb58469910 is a thread
R14=0x00007fbb0fffeb30 is pointing into the stack for thread: 0x00007fbb58469910
R15=0x00007fbb0fffead0 is pointing into the stack for thread: 0x00007fbb58469910
Registers:
RAX=0x00007fbb61b61000, RBX=0x00007fbb58023d70, RCX=0x00007fbb60adbb9a, RDX=0x00007fbb60946d08
RSP=0x00007fbb0fffea30, RBP=0x00007fbb0fffebf0, RSI=0x00000000000000aa, RDI=0x00007fbb60946d28
R8 =0x0000000000003ac9, R9 =0x00007fbb5d28dfa5, R10=0x000000000000003d, R11=0x0000000000000164
R12=0x00007fbb5d28da90, R13=0x00007fbb58469910, R14=0x00007fbb0fffeb30, R15=0x00007fbb0fffead0
RIP=0x00007fbb6013fd64, EFLAGS=0x0000000000010246, CSGSFS=0x002b000000000033, ERR=0x0000000000000006
TRAPNO=0x000000000000000e
Top of Stack: (sp=0x00007fbb0fffea30)
0x00007fbb0fffea30: 00007fbb0fffea90 00007fbb0fffea50
0x00007fbb0fffea40: 00007fbb1c000fa0 00007fbb61b5c820
0x00007fbb0fffea50: 00007fbb58469910 00007fbb58469ec0
0x00007fbb0fffea60: 00007fbb58469f40 00007fbb58469f60
Instructions: (pc=0x00007fbb6013fd64)
0x00007fbb6013fc64: ff ff 0f 84 a1 00 00 00 49 8b 84 24 88 00 00 00
0x00007fbb6013fc74: 48 8d 0d af d1 9a 00 48 89 ca 48 85 c0 74 55 48
0x00007fbb6013fc84: 8b 40 10 48 89 8d 50 fe ff ff 0f b7 70 2a 48 8b
0x00007fbb6013fc94: 78 08 e8 25 42 76 ff 48 89 c7 e8 4d 40 5a 00 49
0x00007fbb6013fca4: 8b bc 24 88 00 00 00 48 8b 95 50 fe ff ff 48 89
0x00007fbb6013fcb4: c1 48 85 ff 74 1e 48 89 85 50 fe ff ff e8 5a 72
0x00007fbb6013fcc4: 23 00 48 89 c7 e8 22 40 5a 00 48 8b 8d 50 fe ff
0x00007fbb6013fcd4: ff 48 89 c2 4c 89 ef 48 89 8d 48 fe ff ff 48 89
0x00007fbb6013fce4: 95 50 fe ff ff e8 02 83 03 00 48 8b 8d 48 fe ff
0x00007fbb6013fcf4: ff 48 8b 95 50 fe ff ff 48 8d 3d 25 64 90 00 48
0x00007fbb6013fd04: 89 c6 31 c0 e8 53 eb fc ff 4c 89 f7 4c 89 bd 40
0x00007fbb6013fd14: ff ff ff e8 d4 0c 6a ff e9 47 fd ff ff 0f 1f 80
0x00007fbb6013fd24: 00 00 00 00 4c 89 e7 ff d0 49 8b 54 24 20 e9 09
0x00007fbb6013fd34: fe ff ff 66 0f 1f 84 00 00 00 00 00 48 8d 05 71
0x00007fbb6013fd44: e0 cf 00 48 8d 3d da 6f 80 00 48 8d 0d 45 be 99
0x00007fbb6013fd54: 00 be aa 00 00 00 48 8d 15 a7 6f 80 00 48 8b 00
0x00007fbb6013fd64: c6 00 58 31 c0 e8 92 50 8f ff e8 4d 35 33 00 48
0x00007fbb6013fd74: 8b bd 48 ff ff ff e9 6d fd ff ff 90 55 48 89 e5
0x00007fbb6013fd84: 41 56 41 55 41 54 49 89 fc 53 48 83 ec 40 48 8b
0x00007fbb6013fd94: 07 ff 90 20 02 00 00 84 c0 0f 85 ad 00 00 00 48
0x00007fbb6013fda4: 8d 05 16 1d d1 00 83 38 01 0f 8e 8d 00 00 00 e8
0x00007fbb6013fdb4: 08 11 de ff 4c 8d 75 a0 49 89 c5 48 8d 05 5a 20
0x00007fbb6013fdc4: db 00 f6 40 44 20 0f 85 c0 00 00 00 4c 89 f7 e8
0x00007fbb6013fdd4: 08 ae fe ff 48 8d 05 01 2b db 00 48 8b 18 48 85
0x00007fbb6013fde4: db 74 1d 66 0f 1f 84 00 00 00 00 00 48 89 df 4c
0x00007fbb6013fdf4: 89 e6 e8 f5 fb ff ff 48 8b 5b 18 48 85 db 75 ec
0x00007fbb6013fe04: 48 8d 05 ad 74 ce 00 80 7d a8 00 48 89 45 a0 74
0x00007fbb6013fe14: 2b 66 48 8d 3d bb 96 cf 00 66 66 48 e8 5b 51 1f
0x00007fbb6013fe24: ff 48 8b 18 48 85 db 0f 84 ae 00 00 00 8b 83 00
0x00007fbb6013fe34: 03 00 00 83 e8 01 89 83 00 03 00 00 48 83 c4 40
0x00007fbb6013fe44: 5b 41 5c 41 5d 41 5e 5d c3 0f 1f 00 48 8d 05 61
0x00007fbb6013fe54: df cf 00 48 8d 0d fa 62 90 00 48 8d 15 1b 63 90
Stack slot to memory mapping:
stack at sp + 0 slots: 0x00007fbb0fffea90 is pointing into the stack for thread: 0x00007fbb58469910
stack at sp + 1 slots: 0x00007fbb0fffea50 is pointing into the stack for thread: 0x00007fbb58469910
stack at sp + 2 slots: 0x00007fbb1c000fa0 points into unknown readable memory: 02 00 00 00 01 00 00 00
stack at sp + 3 slots: 0x00007fbb61b5c820: CompiledMethodLoad+0x0000000000000000 in /opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1168/linux-x64-debug.test/hotspot/jtreg/native/libCompiledZombie.so at 0x00007fbb61b5c000
stack at sp + 4 slots: 0x00007fbb58469910 is a thread
stack at sp + 5 slots: 0x00007fbb58469ec0 points into unknown readable memory: 50 4e e3 60 bb 7f 00 00
stack at sp + 6 slots: 0x00007fbb58469f40 points into unknown readable memory: 68 ee de 60 bb 7f 00 00
stack at sp + 7 slots: 0x00007fbb58469f60 points into unknown readable memory: bc bc bc bc bc bc bc bc
- backported by
-
JDK-8306092 assert(_value != __null) failed: resolving NULL _value in JvmtiExport::post_compiled_method_load
-
- Resolved
-
-
JDK-8310078 assert(_value != __null) failed: resolving NULL _value in JvmtiExport::post_compiled_method_load
-
- Resolved
-
- duplicates
-
JDK-8268524 nmethod::post_compiled_method_load_event racingly called on zombie
-
- Closed
-
-
JDK-8181110 jvmti/hotswap test crashes in Method::checked_resolve_jmethod_id(_jmethodID*)
-
- Closed
-
-
JDK-8227410 jvmti/scenarios/hotswap/HS101/hs101t005 crashes with SIGSEGV
-
- Closed
-
- relates to
-
JDK-8244660 Code cache sweeper heuristics is broken
-
- Resolved
-
-
JDK-8246442 nmethod::can_convert_to_zombie() asserts when not called by the sweeper
-
- Resolved
-
-
JDK-8181110 jvmti/hotswap test crashes in Method::checked_resolve_jmethod_id(_jmethodID*)
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/2bf98280
-
Commit
openjdk/jdk/b969136b
-
Review
openjdk/jdk17u-dev/1227
-
Review
openjdk/jdk/4602