8245877: assert(_value != __null) failed: resolving NULL _value in JvmtiExport::post_compiled_method_load

Backport-of: b969136b9fcf5f977ebe466f5f9de5c520413e84